[tool.poetry]
name = "sorting_methods_simulation"
version = "0.1.0"
description = ""
authors = ["Edyo de Andrade <edyoandrade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
start = 'sorting_methods_simulation.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
